# unpdf

./: .copilot-cli.json  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PowerShell-Profile-Additions.ps1  README.md  check_coordinates.py  check_span_detection.py  check_strikethrough.py  compare_output.py  pyproject.toml  run_test_cases.py  test_full_conversion.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  COPILOT_ACTUAL_CONFIG.md  COPILOT_CLI_SETUP.md  DEBUG-GUIDE.md  EXAMPLES.md  LIMITATIONS.md  PDF-CHALLENGES.md  PDF-PARSING-APPROACHES.md  STYLE_GUIDE.md  USER_GUIDE.md  accuracy-detection.md  conversion-accuracy-metrics.md
docs/ai/: PROJECT_SETUP_COMPLETE.md  README.md  baseline_metrics.json  current-status.md  phase-0-completion.md  phase-1-completion.md  phase-2-2-xycut-completion.md  phase-2-3-rlsa-completion.md  phase-2-5-whitespace-completion.md  phase-2-completion.md  phase-3-completion.md  phase-3-table-detection-completion.md  phase-4-1-caption-detection-completion.md  phase-4-2-block-detection-integration.md  phase-4-2-completion.md  phase-4-completion.md  phase-5-completion.md  phase-5-reading-order-completion.md  phase-6-completion.md  phase-7-completion.md  phase-8-completion.md  phase-9-completion.md  phase-9-step-1-completion.md  plan-001-implementation.md  plan-002-conversion-quality-fixes.md  plan-002-fixes.md  plan-003-high-accuracy-non-ai.md  plan-004-analysis.md  plan-004-mvp-completion.md  plan-004-mvp-obsidian.md  plan-004-mvp-verification.md  plan-005-accuracy-detection.md  plan-006-test-fixes.md  plan-006-test-suite.md  plan-007-accuracy-fixes.md  plan-007-inline-formatting-fixes.md  plan-007-phase-1-2-progress.md  plan-007-phase-1-3-completion.md  plan-007-phase-2-start.md  plan-008-debug-output.md  (+10 more)
scripts/: check_code_blocks.py  check_code_indent.py  check_frontmatter.py  collect_baseline_metrics.py  run_all_tests.py  run_test_cases_with_debug.py  test_accuracy.py
tests/: __init__.py  conftest.py  test_accuracy.py  test_block_classifier.py  test_block_detector.py  test_caption_detector.py  test_cli.py  test_docstrum.py  test_document_processor.py  test_document_renderer.py  test_font_analyzer.py  test_footnote_detector.py  test_images.py  test_layout.py  test_layout_analyzer.py  test_links.py  test_list_detector.py  test_regression.py  test_rlsa.py  test_strikethrough.py  test_structure.py  test_table_content_extractor.py  test_whitespace.py  test_xycut.py
tests/integration/: test_edge_cases.py  test_feature_specific.py  test_round_trip.py
tests/processors/: test_code_detector.py  test_header_classifier.py  test_layout_tree.py  test_table_detector.py
tests/test_cases/: 01_basic_text.md  02_text_formatting.md  03_lists.md  03_lists_debug.txt  04_code_blocks.md  05_tables.md  06_links_and_quotes.md  07_headings.md  08_horizontal_rules.md  09_complex_document.md  10_advanced_tables.md  README.md  test_output_01.md  test_output_02.md
tests/unit/: test_blockquote_processor.py  test_cli.py  test_code_processor.py  test_core.py  test_heading_processor.py  test_list_processor.py  test_markdown_renderer.py  test_reading_order.py  test_style_preservation.py  test_table_processor.py  test_text_extractor.py
unpdf/: __init__.py  cli.py  core.py
unpdf/accuracy/: __init__.py  element_detector.py  element_scorer.py
unpdf/debug/: __init__.py  structure_dumper.py
unpdf/extractors/: __init__.py  coordinates.py  font_analyzer.py  images.py  rlsa.py  strikethrough.py  structure.py  text.py  xycut.py
unpdf/models/: __init__.py  layout.py
unpdf/processors/: __init__.py  block_classifier.py  block_detector.py  blockquote.py  code.py  (+19 more)
(+3 files in other folders)
